--- a/index.html
+++ b/index.html
@@ -1,77 +1,8 @@
+<! Document>
+<html>
+<body>
+</body>
 
-<!DOCTYPE html>
-
-<html lang="en">
-
-  <head>
-
-
-            <div class="col-md-12 footer_counter text-center">
-
-                <a href="https://info.flagcounter.com/vqKZ"><img src="https://s01.flagcounter.com/count/vqKZ/bg_E50A7F/txt_FFFFFF/border_E50A7F/columns_4/maxflags_24/viewers_3/labels_0/pageviews_0/flags_0/percent_0/" alt="" border="0"></a>
-
-                <!--<a href="https://info.flagcounter.com/oQpq"><img src="https://s01.flagcounter.com/countxl/oQpq/bg_FFFFFF/txt_000000/border_FFFFFF/columns_8/maxflags_24/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="" border="0"></a>-->
-
-            </div>
-
-        </div>
-
-    </section>
-
-    </div>
-
-    <div class="top_btn">
-
-     <a href="#" class="back-to-top">
-
-      <i class="fas fa-angle-up"></i>
-
-    </a>
-
-    </div>
-
-
-
-    <script src="assets/js/jquery-3.6.1.min.js"></script>
-
-    <script src="assets/js/bootstrap.min.js"></script>
-
-    <script src="assets/js/jquery.countdown.min.js"></script>
-
-    <script src="https://cdn.lordicon.com/fudrjiwc.js"></script>
-
-    <script src="assets/js/wow.js"></script>
-
-    <script>
-
-      $( document ).ready(function() {
-
-    new WOW().init()
-
-});
-
-    </script>
-
-
-
-<script>
-
-        $('[data-countdown]').each(function() {
-
-            var $this = $(this),
-
-                finalDate = $(this).data('countdown');
-
-            $this.countdown(finalDate, function(event) {
-
-                $this.html(event.strftime('<div class="header-countdown pt-70 d-flex justify-content-center"><div class="single-count-content count-color-1"><span class="count">%D</span><p class="text">Days</p></div><div class="single-count-content count-color-2"><span class="count">%H</span><p class="text">Hours</p></div><div class="single-count-content count-color-3"><span class="count">%M</span><p class="text">Minutes</p></div><div class="single-count-content count-color-4"><span class="count">%S</span><p class="text">Seconds</p></div></div>'));
-
-            });
-
-        });
-
-    </script>
-
-  </body>
-
-	</html>
+<footer>
+<a href="https://info.flagcounter.com/O6W9"><img src="https://s01.flagcounter.com/count2/O6W9/bg_FF007F/txt_FFFFFF/border_FFFFFF/columns_4/maxflags_24/viewers_3/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
+</footer>
