--- a/index.html
+++ b/index.html
@@ -2,6 +2,41 @@
 <html>
 <body>
 
+  <!-- Top header menu containing
+        logo and Navigation bar -->
+    <div id="top-header">
+        <!-- Logo -->
+        <div id="logo">
+            <img src="images/logo.png" />
+        </div>
+        <!-- Navigation Menu -->
+        <nav>
+            <ul>
+                <li class="active">
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">About Us</a>
+                </li>
+                <li>
+                    <a href="#">Our Products</a>
+                </li>
+                <li>
+                    <a href="#">Careers</a>
+                </li>
+                <li>
+                    <a href="#">Contact Us</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+    <!-- Image menu in Header to contain an Image and
+        a sample text over that image -->
+    <div id="header-image-menu">
+    </div>
+      </header>
+  
+
 
 <footer>
 <a href="https://info.flagcounter.com/O6W9"><img src="https://s01.flagcounter.com/count2/O6W9/bg_FF007F/txt_FFFFFF/border_FFFFFF/columns_4/maxflags_24/viewers_3/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
