--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <! Document>
 <html>
 <body>
-
+<header>
   <!-- Top header menu containing
         logo and Navigation bar -->
     <div id="top-header">
