--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <div id="top-header">
         <!-- Logo -->
         <div id="logo">
-            <img src="images/logo.png" />
+            <img src="https://telegra.ph/file/840f184c1a08a36e8da58.jpg" />
         </div>
         <!-- Navigation Menu -->
         <nav>
