--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <! Document>
 <html>
 
-.box {
+<style>
+  .box {
   width: 30%;
   height: 200px;
   border: 5px dashed #f7a239;
@@ -11,7 +12,7 @@ img {
   width: 100%; /* takes the 100 % width of its container (.box div)*/
   height: 100%; /* takes the 100 % height of its container (.box div)*/
 }
-            
+</style>            
 <body>
 
             <img src="https://telegra.ph/file/840f184c1a08a36e8da58.jpg" />
