--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <style>
   .box {
-  width: 30%;
-  height: 200px;
-  border: 5px dashed #f7a239;
+  width: 100%;
+  height: 100%;
+  border: 0px dashed #f7a239;
 }
 
 img {
