--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
             
 <body>
 
-            <img src="https://telegra.ph/file/840f184c1a08a36e8da58.jpg" max-width: 50%>
+            <img src="https://telegra.ph/file/840f184c1a08a36e8da58.jpg" width:720px>
         
 
 
