--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+DOCTYPE html>
 
 <html>
 
@@ -17,6 +17,106 @@ body{
 /* RGB Effect */.stwRainbow,.stwBlurRainbow{position:fixed;width:100%;bottom:0;left:0;right:0;height:10px;z-index:23;background:linear-gradient(-45deg, #4086F4, #31A952, #FBBE01, #EB4132,#4086F4, #31A952, #FBBE01, #EB4132);background-size:200%;-webkit-animation:animeBar 5s linear infinite;animation:animeBar 5s linear infinite}.stwBlurRainbow{height:10px;z-index:22;filter:blur(10px);opacity:.7}@-webkit-keyframes animeBar{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}@keyframes animeBar{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
 
 </style>
+
+<div class="stwRainbow"></div>
+
+<div class="stwBlurRainbow"></div>
+
+</body>
+
+</html>
+
+<style>
+
+body {
+
+  	margin: 0px;  font-size: 12px;
+
+  	}
+
+  header{
+
+  	display: flex;
+
+      position: fixed;
+
+       background: linear-gradient(to right, #6699ff 0%, #ff0066 100%);
+
+      width: 100%;
+
+      height: 50px;
+
+      top: 0;
+
+      justify-content: space-between;
+
+      align-items: center;
+
+      box-shadow: 2px 2px 8px #ccffff;
+
+  	}
+
+  header .logo{
+
+  	padding-left: 10px;
+
+      color: #ccffff
+
+;
+
+      text-shadow: 1px 1px 8px #;
+
+  	}
+
+ header #search{
+
+ 	height: 30px;
+
+     width: 170px;
+
+     outline: none;
+
+     border: 2px solid gold;
+
+     border-radius: 2px;
+
+    margin: 20px;
+
+    background-color: white;
+
+    box-shadow: 2px 2px 8px red;
+
+ 	}
+
+ header #search:focus{
+
+  color: #000000;
+
+}
+
+  .up {
+
+    position: fixed;
+
+    bottom: 100px;
+
+    right: 20px;
+
+    font-size: 15px;
+
+    background-color: rgb(38, 33, 42);
+
+    color: white;
+
+    padding: 8px 10px;
+
+    border-radius: 5px;
+
+    cursor: pointer;
+
+    display: none;
+
+  }</style>
 
         
 
