--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
 
 <style>
 
+
+
+	.box {
+  width: 30%;
+  height: 200px;
+  border: 5px dashed #f7a239;
+}
+
+img {
+  width: 100%; /* takes the 100 % width of its container (.box div)*/
+  height: 100%; /* takes the 100 % height of its container (.box div)*/
+}
+
+
+
+
+	
 body{
 
     background:white;
@@ -120,7 +137,8 @@ body {
 
         
 
-    
+    <body>
+  <div class="box"> 
 
 <img src="https://telegra.ph/file/840f184c1a08a36e8da58.jpg">
 
@@ -128,7 +146,8 @@ body {
 
 <a href="https://info.flagcounter.com/O6W9"><img src="https://s01.flagcounter.com/count2/O6W9/bg_FF007F/txt_FFFFFF/border_FFFFFF/columns_4/maxflags_24/viewers_3/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
 
-	
+	</div>
+    </body>
 
 <footer>
 
