--- a/index.html
+++ b/index.html
@@ -36,6 +36,63 @@ img {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+	.container {
+  margin-top: 50px;
+}
+.counter .title {
+    color: #dd7700;
+    font-size: 16px;
+    font-size: 1.6rem;
+    text-transform: uppercase;
+    display: block;
+    margin-bottom: 15px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 500;
+}
+.counter .sq {
+    color: #dd7700;
+    display: inline-block;
+    text-align: center;
+}
+.counter .sq .bord {
+    border: 1px solid #dd7700;
+    padding: 12px 15px;
+    margin-right: 18px;
+    text-indent: 0px;
+    font-family: 'Helvetica';
+    font-size: 22px;
+    font-size: 2.2rem;
+    margin-bottom: 5px;
+    width: 54px;
+}
+.counter .sq span {
+    clear: both;
+    display: block;
+    text-indent: -15px;
+    font-size: 16px;
+    font-size: 1.6rem;
+    font-family: "Helvetica";
+}
+.well {
+  text-align: center;
+  max-width: 400px;
+}
+
+
+
+
+	
 	
 
 
@@ -169,41 +226,29 @@ body {
 
 
 
-<!-- Display the countdown timer in an element -->
-<p id="demo"></p>
 
-<script>
-// Set the date we're counting down to
-var countDownDate = new Date("Jan 5, 2024 15:37:25").getTime();
-
-// Update the count down every 1 second
-var x = setInterval(function() {
-
-  // Get today's date and time
-  var now = new Date().getTime();
-
-  // Find the distance between now and the count down date
-  var distance = countDownDate - now;
-
-  // Time calculations for days, hours, minutes and seconds
-  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-  // Display the result in the element with id="demo"
-  document.getElementById("demo").innerHTML = days + "d " + hours + "h "
-  + minutes + "m " + seconds + "s ";
-
-  // If the count down is finished, write some text
-  if (distance < 0) {
-    clearInterval(x);
-    document.getElementById("demo").innerHTML = "EXPIRED";
-  }
-}, 1000);
-</script>
+<div class="container">
+<div class="well">
+   <div class="counter" id="clockdiv">
+      <span class="title">Next Showing</span>
+      <div class="sq">
+         <span class="days bord">1</span> <span class="smalltext">Days</span>
+      </div>
+      <div class="sq">
+         <span class="hours bord">22</span> <span class="smalltext">Hours</span>
+      </div>
+      <div class="sq">
+         <span class="minutes bord">40</span> <span class="smalltext">Mins</span>
+      </div>
+      <div class="sq">
+         <span class="seconds bord">45</span> <span class="smalltext">Secs</span>
+      </div>
+   </div>
+</div>
 
 
+
+	
 
 
 
