--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ body {
 
 
 
-
+<script>
 
 (function () {
   const second = 1000,
@@ -251,7 +251,7 @@ body {
       }, 0)
   }());
 
-
+</script>
 
 
 
