--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ html {
 
 body {
   display: grid;
-  background: $dark;
+  background: #183059;
 }
 
 .container {
@@ -112,11 +112,11 @@ h1 {
 
 .hours {
   background: $white;
-  color: $dark;
+  color: #183059;
 }
 
 .minutes {
-  background: $blue;
+  background: #276FBF;
 }
 
 .seconds {
@@ -128,7 +128,7 @@ h1 {
 
 .numbers {
   font-family: $big;
-  color: $dark;
+  color: #183059;
   font-size: 4em;
 }
 
