--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@ h1 {
   font-size: 1em;
   text-transform: uppercase;
   letter-spacing: 5px;
-  color: $white;
+  color: #F6F4F3;
 }
 
 #timer {
-  color: $white;
+  color: #F6F4F3;
   text-align: center;
   text-transform: uppercase;
   font-family: $font;
@@ -111,7 +111,7 @@ h1 {
 }
 
 .hours {
-  background: $white;
+  background: #F6F4F3;
   color: #183059;
 }
 
@@ -120,7 +120,7 @@ h1 {
 }
 
 .seconds {
-  background: $yellow;
+  background: #F0A202;
   .numbers {
    
   }
@@ -134,7 +134,7 @@ h1 {
 
 .white {
   position: absolute;
-  background: $white;
+  background: #F6F4F3;
   height: 85px;
   width: 75px;
   left: 30%;
@@ -143,14 +143,14 @@ h1 {
     border-bottom: 14px solid $white;
   }
   .string {
-    background: $white;
+    background: #F6F4F3;
     border: 1px solid $white;
   }
 }
 
 .red {
   position: absolute;
-  background: $red;
+  background: #EF2F3C;
   left: 18%;
   top: 9%;
   height: 65px;
@@ -159,14 +159,14 @@ h1 {
     border-bottom: 14px solid $red;
   }
   .string {
-    background: $red;
-    border: 1px solid $red;
+    background: #EF2F3C;
+    border: 1px solid #EF2F3C;
   }
 }
 
 .blue {
   position: absolute;
-  background: $blue;
+  background: #276FBF;
   height: 80px;
   width: 80px;
   left: 60%;
@@ -175,8 +175,8 @@ h1 {
     border-bottom: 14px solid $blue;
   }
   .string {
-    background: $blue;
-    border: 1px solid $blue;
+    background: #276FBF;
+    border: 1px solid #276FBF;
   }
 }
 
@@ -242,7 +242,7 @@ h1 {
 .star {
   width: 20px;
   height: 20px;
-  background: $white;
+  background: #F6F4F3;
   -webkit-clip-path: $star;
   clip-path: $star;
 }
@@ -252,7 +252,7 @@ h1 {
   height: 30px;
   margin-left: 51px;
   margin-top: -5px;
-  background: $red;
+  background: #EF2F3C;
   -webkit-clip-path: $star;
   clip-path: $star;
 }
@@ -267,13 +267,13 @@ footer {
   font-size: 0.7em;
   p {
     letter-spacing: 3px;
-    color: $red;
+    color: #EF2F3C;
   }
   a {
-    color: $white;
+    color: #F6F4F3;
     text-decoration: none;
     &:hover {
-      color: $blue;
+      color: #276FBF;
     }
   }
 	}
