--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ body {
 }
 
 h1 {
-  font-family: $font;
+  font-family: 'Lato', sans-serif;
   text-align: center;
   margin-top: 2em;
   font-size: 1em;
@@ -127,7 +127,7 @@ h1 {
 }
 
 .numbers {
-  font-family: $big;
+  font-family: 'Montserrat', sans-serif;
   color: #183059;
   font-size: 4em;
 }
@@ -140,11 +140,11 @@ h1 {
   left: 30%;
   top: 2%;
   .triangle {
-    border-bottom: 14px solid $white;
+    border-bottom: 14px solid  #F6F4F3;
   }
   .string {
     background: #F6F4F3;
-    border: 1px solid $white;
+    border: 1px solid  #F6F4F3;
   }
 }
 
@@ -172,7 +172,7 @@ h1 {
   left: 60%;
   top: 5%;
   .triangle {
-    border-bottom: 14px solid $blue;
+    border-bottom: 14px solid #276FBF;
   }
   .string {
     background: #276FBF;
