--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ h1 {
   color: #F6F4F3;
   text-align: center;
   text-transform: uppercase;
-  font-family: $font;
+  font-family: 'Lato', sans-serif;
   font-size: .7em;
   letter-spacing: 5px;
   margin-top: 25%;
@@ -156,7 +156,7 @@ h1 {
   height: 65px;
   width: 70px;
   .triangle {
-    border-bottom: 14px solid $red;
+    border-bottom: 14px solid #EF2F3C;
   }
   .string {
     background: #EF2F3C;
@@ -263,7 +263,7 @@ footer {
   right: 0;
   text-transform: uppercase;
   padding: 10px;
-  font-family: $font;
+  font-family: 'Lato', sans-serif;
   font-size: 0.7em;
   p {
     letter-spacing: 3px;
