--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@ h1 {
   width: 20px;
   height: 20px;
   background: #F6F4F3;
-  -webkit-clip-path: $star;
-  clip-path: $star;
+  -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
 }
 
 .star-red {
@@ -253,8 +253,8 @@ h1 {
   margin-left: 51px;
   margin-top: -5px;
   background: #EF2F3C;
-  -webkit-clip-path: $star;
-  clip-path: $star;
+  -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
 }
 
 footer {
