--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@ body {
 
 
 
-
+<p style="background-color:Tomato;">
 
   <div class="string"></div>
 <div class="balloon blue">
@@ -445,6 +445,7 @@ body {
   <div id="timer"></div>
   <h1>4th of july counter</h1>
 </div>
+</p>
 <footer>
   <p>made by <a href="https://codepen.io/juliepark"> julie</a> ♡
 </footer>
