--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@ body {
 
 
 
-<p style="background-color:Tomato;">
+<p style="background-color:#183059;">
 
   <div class="string"></div>
 <div class="balloon blue">
