--- a/index.html
+++ b/index.html
@@ -8,6 +8,37 @@
 
 
 
+
+
+
+<head>
+<style>
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+}
+
+.grid-container > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid black;
+  text-align: center;
+  font-size: 30px;
+}
+</style>
+</head>
+
+
+
+
+	
+
+
+	
+
+
 	.box {
   width: 100%;
   height: 110px;
@@ -430,7 +461,8 @@ body {
 
 
 
-
+<body>
+	<div class="grid-container">
 
   <div class="string"></div>
 <div class="balloon blue">
@@ -444,7 +476,7 @@ body {
 </div>
   <div id="timer"></div>
   <h1>4th of july counter</h1>
-</div>
+</div></div></body>
 <footer>
   <p>made by <a href=""> SUJAN</a> ♡
 </footer>
