--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ body {
 
 <body>
 	<div class="grid-container">
-
+<center>
   <div class="string"></div>
 <div class="balloon blue">
   <div class="star"></div>
@@ -474,7 +474,7 @@ body {
 </div>
   <div id="timer"></div>
   <h1>4th of july counter</h1>
-</div></div></body>
+</div></center></div></body>
 <footer>
   <p>made by <a href=""> SUJAN</a> ♡
 </footer>
