--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ body {
 
 <body>
 	<div class="grid-container">
-<center>
+<h1>
   <div class="string"></div>
 <div class="balloon blue">
   <div class="star"></div>
@@ -473,8 +473,8 @@ body {
   <div class="string"></div>
 </div>
   <div id="timer"></div>
-  <h1>4th of july counter</h1>
-</div></center></div></body>
+  
+</div></h1></div></body>
 <footer>
   <p>made by <a href=""> SUJAN</a> ♡
 </footer>
