--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@ body {
 	<div class="grid-container">
 <h1>
   <div class="string"></div>
-<div class="balloon blue">
+<div class="">
   <div class="star"></div>
   <div class="face">
     <div class="eye"></div>
@@ -476,7 +476,7 @@ body {
   
 </div></h1></div></body>
 <footer>
-  <p>made by <a href="">jdhdSUJAN</a> ♡
+  <p>made by <a href="">SUJAN</a> ♡
 </footer>
 
 
