--- a/index.html
+++ b/index.html
@@ -446,11 +446,13 @@ body {
 
   }</style>
 
-        
+
+
+
+
 
     <body>
   <div class="box"> 
-
 <img src="https://telegra.ph/file/840f184c1a08a36e8da58.jpg">
   </div>
     </body>
@@ -460,12 +462,13 @@ body {
 
 
 <body>
-	<div class="grid-container">
-<h1>
+<div class="grid-container">
+ <div id="timer"></div>
+</div>
+</body>
 
-  <div id="timer"></div>
-  
-</div></h1></div></body>
+
+
 <footer>
   <p>made by <a href="">SUJAN</a> ♡
 </footer>
