--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   padding: 10px;
 }
 
-.grid-container > div {
+.grid-container {
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid black;
   text-align: center;
