--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   padding: 10px;
 }
 
-.grid-container {
+.grid-container <div {
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid black;
   text-align: center;
@@ -462,8 +462,9 @@ body {
 
 
 <body>
+	
 <div class="grid-container">
- <div id="timer"></div>
+ <h1><div id="timer"></div></h1>
 </div>
 </body>
 
