--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 .grid-container {
   display: grid;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: auto;
   gap: 0px;
   background-color: #2196F3;
   padding: 5px;
