--- a/index.html
+++ b/index.html
@@ -464,14 +464,14 @@ body {
 <body>
 	
 <div class="grid-container">
- <h1><div id="timer"></div></h1>
+ <div id="timer"></div>
 </div>
 </body>
 
 
 
 <footer>
-  <p>made by <a href="">SUJAN</a> ♡
+  <p>made by <a href="">hjjhgSUJAN</a> ♡
 </footer>
 
 
