--- a/index.html
+++ b/index.html
@@ -124,8 +124,9 @@ h1 {
   text-transform: uppercase;
   font-family: 'Lato', sans-serif;
   font-size: .7em;
-  letter-spacing: 5px;
-  margin-top: 0%;
+  letter-spacing: 8px;
+  margin-top: 3%;
+  margin-bottom: 3%;
 }
 
 .days, .hours, .minutes, .seconds {
