--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@ let timer = setInterval(function() {
 
 	  
 <body>
-	<div class="flag">
+	<div class="flag"><center> Copyrights All Rights Reserved to Owner | Terms and Conditions | Privacy Policy | Cancellation Policy </center>
   <div class="box1"> 
 
 <a href="https://info.flagcounter.com/O6W9"><img src="https://s01.flagcounter.com/count2/O6W9/bg_FF007F/txt_FFFFFF/border_FF007F/columns_4/maxflags_24/viewers_3/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
