--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
   gap: 0px;
   background-color: #FF007F;
   padding: 0px;
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid black;
+  text-color: #FFFFFF
+  margin-top: 2px;
+  margin-bottom: 2px;
 }
 
 
