--- a/index.html
+++ b/index.html
@@ -90,7 +90,16 @@ img {
 
 
 
+.box2 {
+  width: 100%;
+  height: 800px;
+  border: 0px dashed #f7a239;
+}
 
+img {
+  width: 100%; /* takes the 100 % width of its container (.box div)*/
+  height: 100%; /* takes the 100 % height of its container (.box div)*/
+}
 
 
 
@@ -486,7 +495,7 @@ body {
 
 
 <body>
-	<div class="box">
+	<div class="box2">
 		<img src="https://telegra.ph/file/eb3f5684bc2a16b1c3e0c.jpg"></div> </body>
 
 
