--- a/index.html
+++ b/index.html
@@ -489,8 +489,7 @@ body {
 
     <body>
   <div class="box"> 
-<img src="https://telegra.ph/file/840f184c1a08a36e8da58.jpg">
-  </div>
+<img src="https://telegra.ph/file/af5d18a914066780593c1.jpg"></div>
     </body>
 
 
