--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   display: grid;
   grid-template-columns: auto;
   gap: 0px;
-  background-color: #2196F3;
+  background-color: #FFF1FE;
   padding: 0px;
 }
 
@@ -496,6 +496,15 @@ body {
 <body>
 	<div class="box2">
 		<img src="https://telegra.ph/file/eb3f5684bc2a16b1c3e0c.jpg"></div> </body>
+
+
+
+
+<body>
+	<div class="box>
+<img src="https://telegra.ph/file/eb99bc4d56c950297d00e.jpg"></div></body>
+
+
 
 
 <body>
