--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@ body {
 
 
 <body>
-	<div class="box>
+	<div class="box">
 <img src="https://telegra.ph/file/eb99bc4d56c950297d00e.jpg"></div></body>
 
 
