--- a/index.html
+++ b/index.html
@@ -105,6 +105,16 @@ img {
 
 
 
+.box3 {
+  width: 100%;
+  height: 80px;
+  border: 0px dashed #f7a239;
+}
+
+img {
+  width: 100%; /* takes the 100 % width of its container (.box div)*/
+  height: 100%; /* takes the 100 % height of its container (.box div)*/
+}
 
 
 
@@ -501,7 +511,7 @@ body {
 
 
 <body>
-	<div class="box">
+	<div class="box3">
 <img src="https://telegra.ph/file/b1405276a61121182d827.jpg"></div></body>
 
 
