--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@ let timer = setInterval(function() {
 
 	  
 <body>
-	<div class="flag2"><center> Copyrights All Rights Reserved to Owner | Terms and Conditions | Privacy Policy | Cancellation Policy </center></div>
+	<div class="flag2"><font color="white"><center> Copyrights All Rights Reserved to Owner | Terms and Conditions | Privacy Policy | Cancellation Policy </font></center></div>
  
 	<div class="flag">
 	<div class="box1"> 
