--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   grid-template-columns: auto;
   gap: 0px;
   background-color: #FF007F;
-  padding: 0px;
-  border-bottom: 1px solid black;
+  padding: 1px;
+  border-bottom: 0.5px solid white;
   
 }
 
