--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   grid-template-columns: auto;
   gap: 0px;
   background-color: #FF007F;
-  padding: 1px;
-  border-bottom: 0.5px solid white;
+  bottom-padding: 1px;
+  border-bottom: 0.8px solid white;
   
 }
 
