--- a/index.html
+++ b/index.html
@@ -516,8 +516,7 @@ body {
 
 
 
-<img src="https://doc-14-7o-docs.googleusercontent.com/docs/securesc/u8bgh5o78f0c4b9r3khe6rvahai0bc2h/u7dkq4rccda0ht52dku6b5qp40aus4nb/1694166525000/03681957242159102625/03681957242159102625/1oMlRPKeykUGbGS2A-HCMSjuZpPXvlAa-?e=view&ax=AH3YgiDYycsx_7f7GU8e8ObJbEBJKRMDD5SYovPiXWNeYJFwxyZ2CkGdQI3RHsseH_pCr8dQZVpjFRhF-Cye8HN78ycwkrA4lWCT28BXp-RV-y5rVVAAKVzEIhHecYCVa1FXqQSfc-bmdUARH-OROEj4Y2nBWlzIFxBhmhv4A7rHH8mqfM6Fa-kTyRFmM-N7A1NXpmmPg8fREHyFs6AKjh578DDC9igrs0os9qiCp3ECcZ1G4xefSGZp82kvxnEnThwNfXCxEcJ-m3P1fYwhem-RX2vsO1Atx4GhHcrBE-hetsDB3hy8054-rpm9aV9kAVjxGAqfbEciQYTzJfBupavrT0FHlhVE-bX4bRu9oNZnPqXz1SczCRgIlKeoJh0IhgtnofCA7eSsZ1OIHusjgsQN7s4GkLERJ924qEH__Tj8UngdmCup-ZKrGtzjXMu5bluUHBzMa5M24OTWO3mlOonFvP4u--uRFR6_ENwo7vi6ICCDdmxbAAujanbHe996b9j38YXroTdoa5yELCALOaUREILc17V9sV2QLT50JHk7LPfktOQODfMTeRjojXtAZPQGun5RdPjqNz0S27hIrfgpCHqfhfYZuY_XB6hWrZTRC3o25udqKU9zYIbCpr4kTNeQr-I3RqOJbhlymp3sszrRKosgN-PwoiJZuhqyqNyx7C6kVbG8cb39KvsFnuR8jH2cZHDpVlmQhE4u6tHI3pgnZhlEP_sAx1CvLP-MKDtX6ZiYeO3Z5mHYXrSxkoJTeFBuDL4GRvhiLrrsASc_U2qb7_2SSjC7LEvNpVDIlZqTbUFDjCGsFbhKd76dILbFblSGfI_IqjOckNIp6acmWvKA7MKf9wwmvHIjTElhOiK-FvXFf48bCO0JsntivQifI6c&uuid=eb62eb62-ea1d-47af-b3ae-2ae6971a75e0&authuser=0&nonce=p7bvp6h1i5koq&user=03681957242159102625&hash=6em527g4esuj33b0fhakmjiknbt2vum5">
-
+<img src="https://drive.google.com/uc?export=view&id=1oMlRPKeykUGbGS2A-HCMSjuZpPXvlAa-">
 
 <body>
 	<div class="box3">
