--- a/index.html
+++ b/index.html
@@ -499,7 +499,8 @@ body {
 
     <body>
   <div class="box"> 
-<img src="https://telegra.ph/file/af5d18a914066780593c1.jpg"></div>
+<img src="https://drive.google.com/uc?export=view&id=1uDUEnxjixhd4Y9c1J0jU3WWSJqaC7THI">
+  </div>
     </body>
 
 
