--- a/index.html
+++ b/index.html
@@ -507,8 +507,9 @@ body {
 
 
 <body>
-	<div class="box2">
-		<img src="https://telegra.ph/file/c8cae85b5d7767b1464ba.jpg"></div> </body>
+<div class="box2">
+<img src="https://drive.google.com/uc?export=view&id=192AGGk-cMxhIE7fKYLVoLLvw-dUuw1iK">
+</div> </body>
 
 
 
