--- a/index.html
+++ b/index.html
@@ -515,9 +515,11 @@ body {
 
 <img src="https://drive.google.com/uc?export=view&id=1oMlRPKeykUGbGS2A-HCMSjuZpPXvlAa-">
 
+
 <body>
-	<div class="box3">
-<img src="https://telegra.ph/file/b1405276a61121182d827.jpg"></div></body>
+<div class="box3">
+<img src="https://drive.google.com/uc?export=view&id=1vWBnHOQ_SFUPuEsW138IzMaBEdR88Tf8">
+</div></body>
 
 
 
