--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@ body {
 
 
     <body>
-  <div class="box"> 
+  <div class=""> 
 <img src="https://drive.google.com/uc?export=view&id=1uDUEnxjixhd4Y9c1J0jU3WWSJqaC7THI">
   </div>
     </body>
@@ -507,7 +507,7 @@ body {
 
 
 <body>
-<div class="box2">
+<div class="">
 <img src="https://drive.google.com/uc?export=view&id=192AGGk-cMxhIE7fKYLVoLLvw-dUuw1iK">
 </div> </body>
 
@@ -517,7 +517,7 @@ body {
 
 
 <body>
-<div class="box3">
+<div class="">
 <img src="https://drive.google.com/uc?export=view&id=1vWBnHOQ_SFUPuEsW138IzMaBEdR88Tf8">
 </div></body>
 
