--- a/index.html
+++ b/index.html
@@ -518,6 +518,26 @@ body {
 <img src="https://drive.google.com/uc?export=view&id=1vZclw7y_SwkAlll2S_8BXci5B_Fnvit9">
 
 
+<h1>Example HTML Button</h1>
+    <p>For more information on this topic...</p>
+    <a href="https://www.google.com" target="_blank">
+      <button
+        style="
+          background-color: rgb(6, 6, 6);
+          color: rgb(240, 243, 246);
+          border-radius: 8px;
+          height: 50px;
+          width: 200px;
+          font-size: 18px;
+          font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial,
+            sans-serif;
+        "
+      >
+        Visit Google
+      </button>
+    </a>
+
+
 <body>
 <div class="">
 <img src="https://drive.google.com/uc?export=view&id=1vWBnHOQ_SFUPuEsW138IzMaBEdR88Tf8">
