--- a/index.html
+++ b/index.html
@@ -518,9 +518,9 @@ body {
 <img src="https://drive.google.com/uc?export=view&id=1vZclw7y_SwkAlll2S_8BXci5B_Fnvit9">
 
 
-<h1>Example HTML Button</h1>
-    <p>For more information on this topic...</p>
-    <a href="https://www.google.com" target="_blank">
+<center></center><h1></h1>
+    <p></p>
+    <a href="https://forms.gle/yeD17TSpp2GeaASLA" target="_blank">
       <button
         style="
           background-color: rgb(6, 6, 6);
@@ -533,9 +533,9 @@ body {
             sans-serif;
         "
       >
-        Visit Google
+        Click Here For Registration
       </button>
-    </a>
+    </a></center>
 
 
 <body>
