--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@ body {
 <img src="https://drive.google.com/uc?export=view&id=1vZclw7y_SwkAlll2S_8BXci5B_Fnvit9">
 
 
-<center></center><h1></h1>
+<center><h1></h1>
     <p></p>
     <a href="https://forms.gle/yeD17TSpp2GeaASLA" target="_blank">
       <button
