--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@ body {
 
 <center><h1></h1>
     <p></p>
-    <a href="https://forms.gle/yeD17TSpp2GeaASLA">
+    <a href="https://forms.gle/yeD17TSpp2GeaASLA" target="_blank">>
       <button
         style="
           background-color: rgb(6, 6, 6);
