--- a/index.html
+++ b/index.html
@@ -494,6 +494,26 @@ body {
 
 
 
+<html>
+<head>
+    <title>Show the image on page load using jQuery</title>
+</head>
+<body>
+    <div class='popup'>
+        <div class="img">
+            <img src="https://drive.google.com/uc?export=view&id=1uDUEnxjixhd4Y9c1J0jU3WWSJqaC7THI" alt='quit' class='x' id='x' />   
+            <img src="https://drive.google.com/uc?export=view&id=1uDUEnxjixhd4Y9c1J0jU3WWSJqaC7THI" />
+        </div>
+    </div>
+</body>
+</html>
+
+
+
+
+
+
+
 
 
 
