--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 	
 
-<!DOCTYPE html>
+
 <html>
 <head>
 <meta charset="utf-8">
 <title>Display popup on page load</title>
-<link rel="stylesheet" href="swc.css">
+<link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
 <div class="maintext">
@@ -24,14 +24,14 @@
 <div id="boxes">
 <div style="top: 50%; left: 50%; display: none;" id="dialog" class="window"> 
 <div id="san">
-<a href="#" class="close agree"><img src="close-icon.png" width="25" style="float:right; margin-right: -25px; margin-top: -20px;"></a>
-<img src="san-web-corner.png" width="450">
+<a href="#" class="close agree"><img src="https://drive.google.com/uc?export=view&id=1a43UcmikVxrqyTP-4QrVr8CKiVMTFp9V" width="25" style="float:right; margin-right: -25px; margin-top: -20px;"></a>
+<img src="https://drive.google.com/uc?export=view&id=1a43UcmikVxrqyTP-4QrVr8CKiVMTFp9V" width="450">
 </div>
 </div>
 <div style="width: 2478px; font-size: 32pt; color:white; height: 1202px; display: none; opacity: 0.4;" id="mask"></div>
 </div>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.js"></script> 
-<script src="swc.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
 
