--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Display popup on page load</title>
+<title>Display popup on page</title>
 <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
