--- a/index.html
+++ b/index.html
@@ -1,732 +1,24 @@
 <!DOCTYPE html>
-
 <html>
-
-</footer>
-
-
-
-
-
-	
-
-
-
-
-<style>
-	
-.flag {
-  display: grid;
-  grid-template-columns: auto;
-  gap: 0px;
-  background-color: #FF007F;
-  padding: 0px;
-}
-
-
-.flag2 {
-  display: grid;
-  grid-template-columns: auto;
-  gap: 0px;
-  background-color: #FF007F;
-  padding: 5px;
-  border-bottom: 0.8px solid white;
-  
-}
-
-
-
-
-
-
-
-	
-
-
-
-.grid-container {
-  display: grid;
-  grid-template-columns: auto;
-  gap: 0px;
-  background-color: #FFF1FE;
-  padding: 0px;
-}
-
-.grid-container <div {
-  background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid black;
-  text-align: center;
-  font-size: 30px;
-}
-
-
-
-
-
-	
-
-
-	
-
-
-	.box {
-  width: 100%;
-  height: 110px;
-  border: 0px dashed #f7a239;
-}
-
-img {
-  width: 100%; /* takes the 100 % width of its container (.box div)*/
-  height: 100%; /* takes the 100 % height of its container (.box div)*/
-}
-
-
-
-.box1 {
-  width: 100%;
-  height: 200px;
-  border: 0px dashed #f7a239;
-}
-
-img {
-  width: 100%; /* takes the 100 % width of its container (.box div)*/
-  height: 100%; /* takes the 100 % height of its container (.box div)*/
-}
-
-
-
-
-.box2 {
-  width: 100%;
-  height: 600px;
-  border: 0px dashed #f7a239;
-}
-
-img {
-  width: 100%; /* takes the 100 % width of its container (.box div)*/
-  height: 100%; /* takes the 100 % height of its container (.box div)*/
-}
-
-
-
-
-
-.box3 {
-  width: 100%;
-  height: 90px;
-  border: 0px dashed #f7a239;
-}
-
-img {
-  width: 100%; /* takes the 100 % width of its container (.box div)*/
-  height: 100%; /* takes the 100 % height of its container (.box div)*/
-}
-
-
-
-
-
-
-
-@import url('https://fonts.googleapis.com/css?family=Lato:400,700|Montserrat:900');
-
-$font: 'Lato', sans-serif;
-$big: 'Montserrat', sans-serif;
-
-$red: #EF2F3C;
-$white: #F6F4F3;
-$blue: #276FBF;
-$dark: #183059;
-$yellow: #F0A202;
-
-$star: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-  
-html {
-  display: grid;
-  min-height: 100%;
-}
-
-body {
-  display: grid;
-  background: #F0A202;
-}
-
-.container {
-  position: relative;
-  margin: auto;
-  overflow: hidden;
-  width: 650px;
-  height: 480px;
-}
-
-h1 {
-  font-family: 'Lato', sans-serif;
-  text-align: center;
-  margin-top: 2em;
-  font-size: 1em;
-  text-transform: uppercase;
-  letter-spacing: 5px;
-  color: #F6F4F3;
-}
-
-#timer {
-  color: #F6F4F3;
-  text-align: center;
-  text-transform: uppercase;
-  font-family: 'Lato', sans-serif;
-  font-size: .7em;
-  letter-spacing: 7px;
-  margin-top: 1%;
-  margin-bottom: 1%;
-}
-
-.days, .hours, .minutes, .seconds {
-  display: inline-block;
-  padding: 20px;
-  width: 100px;
-  border-radius: 8px;
-}
-
-.days {
-  background: #EF2F3C;
-}
-
-.hours {
-  background: #F6F4F3;
-  color: #183059;
-}
-
-.minutes {
-  background: #276FBF;
-}
-
-.seconds {
-  background: #F0A202;
-  .numbers {
-   
-  }
-}
-
-.numbers {
-  font-family: 'Montserrat', sans-serif;
-  color: #183059;
-  font-size: 4em;
-}
-
-.white {
-  position: absolute;
-  background: #F6F4F3;
-  height: 85px;
-  width: 75px;
-  left: 30%;
-  top: 2%;
-  .triangle {
-    border-bottom: 14px solid  #F6F4F3;
-  }
-  .string {
-    background: #F6F4F3;
-    border: 1px solid  #F6F4F3;
-  }
-}
-
-.red {
-  position: absolute;
-  background: #EF2F3C;
-  left: 18%;
-  top: 9%;
-  height: 65px;
-  width: 70px;
-  .triangle {
-    border-bottom: 14px solid #EF2F3C;
-  }
-  .string {
-    background: #EF2F3C;
-    border: 1px solid #EF2F3C;
-  }
-}
-
-.blue {
-  position: absolute;
-  background: #276FBF;
-  height: 80px;
-  width: 80px;
-  left: 60%;
-  top: 5%;
-  .triangle {
-    border-bottom: 14px solid #276FBF;
-  }
-  .string {
-    background: #276FBF;
-    border: 1px solid #276FBF;
-  }
-}
-
-.balloon {
-  border: 1px solid #000;
-  border-radius: 50% 50% 50% 50%/ 40% 40% 60% 60%;
-  z-index: 2;
-}
-
-.eye {
-  position: absolute;
-  width: 7px;
-  height: 7px;
-  top: 40%;
-  left: 22%;
-  background: #000;
-  border-radius: 50%;
-  &:after {
-    content: '';
-    left: 35px;
-    width: 7px;
-    height: 7px;
-    border-radius: 50%;
-    background: #000;
-    position: absolute;
-  }
-}
-
-.mouth {
-  position:absolute;
-  top: 45%;
-  left: 43%;
-  width: 7px;
-  height: 7px;
-  border-radius: 50%;
-}
-
-.happy {
-  border: 2px solid;
-  border-color: transparent #000 #000 transparent;
-  transform: rotate(45deg);
-}
-
-.triangle {
-  position: absolute;
-  left: 40%;
-  bottom: -10%;
-  width: 0;
-	height: 0;
-	border-left: 7px solid transparent;
-	border-right: 7px solid transparent;
-}
-
-.string {
-  position: absolute;
-  height: 70px;
-  width: 1px;
-  left: 48%;
-  top: 100%;
-  z-index: -1;
-}
-
-.star {
-  width: 20px;
-  height: 20px;
-  background: #F6F4F3;
-  -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-}
-
-.star-red {
-  width: 30px;
-  height: 30px;
-  margin-left: 51px;
-  margin-top: -5px;
-  background: #EF2F3C;
-  -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-}
-
-footer {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  text-transform: uppercase;
-  padding: 10px;
-  font-family: 'Lato', sans-serif;
-  font-size: 0.7em;
-  p {
-    letter-spacing: 3px;
-    color: #EF2F3C;
-  }
-  a {
-    color: #F6F4F3;
-    text-decoration: none;
-    &:hover {
-      color: #276FBF;
-    }
-  }
-	}
-
-
-
-
-
-
-
-
-
-
-	
-
-
-
-
-
-
-
-
-
-	
-	
-
-
-
-	
-
-	
-body{
-
-    background:white;
-
-}
-
-    /* Reading progress bar */ .progB{position:fixed;top:0;left:0;width:0;height:3px;z-index:97;background-color:var(--linkC)}.drK .progB{background-color:var(--darkU)}
-
-/* RGB Effect */.stwRainbow,.stwBlurRainbow{position:fixed;width:100%;bottom:0;left:0;right:0;height:10px;z-index:23;background:linear-gradient(-45deg, #4086F4, #31A952, #FBBE01, #EB4132,#4086F4, #31A952, #FBBE01, #EB4132);background-size:200%;-webkit-animation:animeBar 5s linear infinite;animation:animeBar 5s linear infinite}.stwBlurRainbow{height:10px;z-index:22;filter:blur(10px);opacity:.7}@-webkit-keyframes animeBar{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}@keyframes animeBar{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
-
-</style>
-
-<div class="stwRainbow"></div>
-
-<div class="stwBlurRainbow"></div>
-
-</body>
-
-</html>
-
-<style>
-
-body {
-
-  	margin: 0px;  font-size: 12px;
-
-  	}
-
-  header{
-
-  	display: flex;
-
-      position: fixed;
-
-       background: linear-gradient(to right, #6699ff 0%, #ff0066 100%);
-
-      width: 100%;
-
-      height: 50px;
-
-      top: 0;
-
-      justify-content: space-between;
-
-      align-items: center;
-
-      box-shadow: 2px 2px 8px #ccffff;
-
-  	}
-
-  header .logo{
-
-  	padding-left: 10px;
-
-      color: #ccffff
-
-;
-
-      text-shadow: 1px 1px 8px #;
-
-  	}
-
- header #search{
-
- 	height: 30px;
-
-     width: 170px;
-
-     outline: none;
-
-     border: 2px solid gold;
-
-     border-radius: 2px;
-
-    margin: 20px;
-
-    background-color: white;
-
-    box-shadow: 2px 2px 8px red;
-
- 	}
-
- header #search:focus{
-
-  color: #000000;
-
-}
-
-  .up {
-
-    position: fixed;
-
-    bottom: 100px;
-
-    right: 20px;
-
-    font-size: 15px;
-
-    background-color: rgb(38, 33, 42);
-
-    color: white;
-
-    padding: 8px 10px;
-
-    border-radius: 5px;
-
-    cursor: pointer;
-
-    display: none;
-
-  }</style>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <body>
-  <div class=""> 
-<img src="https://drive.google.com/uc?export=view&id=1uDUEnxjixhd4Y9c1J0jU3WWSJqaC7THI">
-  </div>
-    </body>
-
-
-
-
+<head>
+<meta charset="utf-8">
+<title>Display popup on page load</title>
+<link rel="stylesheet" href="swc.css">
+</head>
 <body>
-<div class="">
-<img src="https://drive.google.com/uc?export=view&id=1J4xrcdX3EJkw1DUzUGhmqaHxK_e31-FW">
-</div> </body>
-
-
-
-<img src="https://drive.google.com/uc?export=view&id=1a43UcmikVxrqyTP-4QrVr8CKiVMTFp9V">
-
-
-<img src="https://drive.google.com/uc?export=view&id=1i4XIrVJSxYNa2NXLm7z8eyFIL3yKoC6Y">
-
-
-
-
-<img src="https://drive.google.com/uc?export=view&id=1qtvbKwS7oYtpE7vSgk0a_B1wZlvzLpH7">
-
-
-<center><h1></h1>
-    <p></p>
-    <a href="https://forms.gle/yeD17TSpp2GeaASLA" target="_blank">
-      <button
-        style="
-          background-color: rgb(6, 6, 6);
-          color: rgb(240, 243, 246);
-          border-radius: 8px;
-          height: 50px;
-          width: 200px;
-          font-size: 18px;
-          font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial,
-            sans-serif;
-        "
-      >Click Here For Registration
-      </button>
-    </a></center>
-
-
-<body>
-<div class="">
-<img src="https://drive.google.com/uc?export=view&id=1vWBnHOQ_SFUPuEsW138IzMaBEdR88Tf8">
-</div></body>
-
-
-
-
-<body>
-	
-<div class="grid-container">
- <div id="timer"></div>
+<div class="maintext">
+<h2> Main text goes here...</h2>
 </div>
+<div id="boxes">
+<div style="top: 50%; left: 50%; display: none;" id="dialog" class="window"> 
+<div id="san">
+<a href="#" class="close agree"><img src="close-icon.png" width="25" style="float:right; margin-right: -25px; margin-top: -20px;"></a>
+<img src="san-web-corner.png" width="450">
+</div>
+</div>
+<div style="width: 2478px; font-size: 32pt; color:white; height: 1202px; display: none; opacity: 0.4;" id="mask"></div>
+</div>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.js"></script> 
+<script src="swc.js"></script>
 </body>
-
-
-
-<footer>
-  <p>made by <a href="">SUJAN</a> ♡
-</footer>
-
-
-
-
-
-<script>
-
-const year = new Date().getFullYear();
-const fourthOfJuly = new Date(year, 6,4).getTime();
-const fourthOfJulyNextYear = new Date(year + 0, 11, 8).getTime();
-const month = new Date().getMonth();
-
-// countdown
-let timer = setInterval(function() {
-
-  // get today's date
-  const today = new Date().getTime();
-
-  // get the difference
-  let diff;
-  if(month > 6) {
-    diff = fourthOfJulyNextYear - today;
-  } else {
-    diff = fourthOfJuly - today;
-  }
-
-
-
-
-  // math
-  let days = Math.floor(diff / (1000 * 60 * 60 * 24));
-  let hours = Math.floor((diff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-  let minutes = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
-  let seconds = Math.floor((diff % (1000 * 60)) / 1000);
-
-  // display
-  document.getElementById("timer").innerHTML =
-    "<div class=\"days\"> \
-  <div class=\"numbers\">" + days + "</div>days</div> \
-<div class=\"hours\"> \
-  <div class=\"numbers\">" + hours + "</div>hours</div> \
-<div class=\"minutes\"> \
-  <div class=\"numbers\">" + minutes + "</div>minutes</div> \
-<div class=\"seconds\"> \
-  <div class=\"numbers\">" + seconds + "</div>seconds</div> \
-</div>";
-
-}, 1000); 
-</script>
-
-
-
-
-
-
-
-	  
-<body>
-	<div class="flag2">
-	<font color="white">
-	<center>
-	Copyrights All Rights Reserved to Owner | Terms and Conditions | Privacy Policy | Cancellation Policy 
-	</font>
-	</center>
-	</div>
- 
-	
-
-	
-
-<footer>
-
-			<div class="footer bg-dark text-light">
-
-				<p class="copyright"></p><a href=""></a> </div>
-
-		</footer>
-
-		<script src="https://code.jquery.com/jquery-3.6.1.js"></script>
-
-		<script src="data/main.js"></script>
-
-		<script>
-
-			$(document).ready(function(){
-
-			  $("#search").on("keyup", function() {
-
-			    var value = $(this).val().toLowerCase();
-
-			    $(".livebbtv-item").filter(function() {
-
-			      $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
-
-			    });
-
-			  });
-
-			});
-
-			
-
-			
-
-			
-
-			
-
-			
-
-			        $(document).ready(function(){
-
-			            $("#menuimg").click(function(){
-
-			               $("#drop").slideToggle("fast"); 
-
-			            });
-
-			        });
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-			
-		</script>
-
-	</body>
-
 </html>
-
-
