--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="img">
             <img src="images/quit.png" alt='quit' class='x'
                 id='x' />   
-            <img src="img/codesolutions.png" />
+            <img src="https://drive.google.com/uc?export=view&id=1vWBnHOQ_SFUPuEsW138IzMaBEdR88Tf8" />
           
         </div>
     </div>
