--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
 
 </footer>
 
-FFF
+<html>
+<head>
+  <title>Kalyani Obstetrics & Gynaecological Society</title>
+</head>
+<body>
+
+<h1></h1>
+<p></p>
+
+</body>
+</html>
 
 
 
