--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
 <html>
 <head>
-  <title>Kalyani Obstetrics & Gynaecological Society</title>
+  <title>My Page Title</title>
+  <link rel="icon" type="image/x-icon" href="https://drive.google.com/uc?export=view&id=19VoUcYqcuBi8gO7OLimuhPWNVDqF6uOE">
 </head>
 </html>
 
