--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 
 <html>
 <head>
+
+<meta name="google-site-verification" content="seEclyXnQ3nZIZoFXZPxhR0Em7kGtnQYh2CfRjMnt5o" />
+
+
+	
   <title>Kalyani Obstetric & Gynaecological Society
 </title>
   <link rel="icon" type="image/x-icon" href="https://drive.google.com/uc?export=view&id=19VoUcYqcuBi8gO7OLimuhPWNVDqF6uOE">
