--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 	
-  <title>Kalyani Obstetric & Gynaecological Society
+  <title>Kalyani Obstetric & Gynaecological Society (KOGSMILAN2023)
 </title>
   <link rel="icon" type="image/x-icon" href="https://drive.google.com/uc?export=view&id=19VoUcYqcuBi8gO7OLimuhPWNVDqF6uOE">
 </head>
