--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@ body {
 
     <body>
   <div class=""> 
-<img src="https://drive.google.com/uc?export=view&id=1kLUAnkdmWRUEcF8qXUJKb35Q6WuJMRuk">
+<img src="http://drive.google.com/uc?export=view&id=1kLUAnkdmWRUEcF8qXUJKb35Q6WuJMRuk">
   </div>
     </body>
 
@@ -531,7 +531,7 @@ body {
 
 <body>
 <div class="">
-<img src="https://drive.google.com/uc?export=view&id=1OzA61ry8Rxt24zSQ5PoG2zakD8777-um">
+<img src="http://drive.google.com/uc?export=view&id=1OzA61ry8Rxt24zSQ5PoG2zakD8777-um">
 </div> </body>
 
 
