--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@ body {
 
     <body>
   <div class=""> 
-<img src="http://drive.google.com/uc?export=view&id=1kLUAnkdmWRUEcF8qXUJKb35Q6WuJMRuk">
+<img src="https://drive.google.com/thumbnail?id=FILE_ID&sz=1kLUAnkdmWRUEcF8qXUJKb35Q6WuJMRuk">
   </div>
     </body>
 
