--- a/index.html
+++ b/index.html
@@ -519,7 +519,8 @@ body {
 
     <body>
   <div class=""> 
-<img src="https://drive.google.com/thumbnail?id=FILE_ID&sz=1kLUAnkdmWRUEcF8qXUJKb35Q6WuJMRuk">
+<img src="https://drive.google.com/thumbnail?id=1kLUAnkdmWRUEcF8qXUJKb35Q6WuJMRuk&sz=s400">
+	  https://drive.google.com/thumbnail?id=FILE_ID&sz=s4000
   </div>
     </body>
 
