--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 	
   <title>Kalyani Obstetric & Gynaecological Society (KOGS MILAN 2023)
 </title>
-  <link rel="icon" type="image/x-icon" href="https://drive.google.com/uc?export=view&id=19VoUcYqcuBi8gO7OLimuhPWNVDqF6uOE">
+  <link rel="icon" type="image/x-icon" href="https://drive.google.com/thumbnail?id=19VoUcYqcuBi8gO7OLimuhPWNVDqF6uOE&sz=s4000">
+
 </head>
 </html>
 
@@ -525,33 +526,32 @@ body {
     </body>
 
 
-<a href="https://drive.google.com/drive-viewer/AKGpihYgUxIlyGwTXAVQgk9lsWv7va2eDBwppmKqoLuXCmfbRgbH1nyFzPJ_G7QZ7Cfb_hPGPfN5d6kiTCrgkmY7dvtNzfmXV1BsVw4=s1600-rw-v1?source=screenshot.guru"> <img src="https://drive.google.com/drive-viewer/AKGpihYgUxIlyGwTXAVQgk9lsWv7va2eDBwppmKqoLuXCmfbRgbH1nyFzPJ_G7QZ7Cfb_hPGPfN5d6kiTCrgkmY7dvtNzfmXV1BsVw4=s1600-rw-v1" /> </a>
 
 
 
 
 <body>
 <div class="">
-<img src="http://drive.google.com/uc?export=view&id=1OzA61ry8Rxt24zSQ5PoG2zakD8777-um">
+<img src="https://drive.google.com/thumbnail?id=1OzA61ry8Rxt24zSQ5PoG2zakD8777-um&sz=s4000">
 </div> </body>
 
 
 
-<img src="https://drive.google.com/uc?export=view&id=1Dxc4Mn0pVM1RIo5Za79oITK-t9l4Mvgn">
+<img src="https://drive.google.com/thumbnail?id=1Dxc4Mn0pVM1RIo5Za79oITK-t9l4Mvgn&sz=s4000">
 
 
-<img src="https://drive.google.com/uc?export=view&id=1CSJi-EXY7iodHn_d-doVUqHM3tQleZRk">
+<img src="https://drive.google.com/thumbnail?id=1CSJi-EXY7iodHn_d-doVUqHM3tQleZRk&sz=s4000">
 
 
-<img src="https://drive.google.com/uc?export=view&id=1jFs5D3UmsMSxypWLAf8ekUALKjYTz33L">
-
-
-
+<img src="https://drive.google.com/thumbnail?id=1jFs5D3UmsMSxypWLAf8ekUALKjYTz33L&sz=s4000">
 
 
 
 
-<img src="https://drive.google.com/uc?export=view&id=1eFGd1qnZfELgUmmZvyrzj2EGUgUFzwWD">
+
+
+
+<img src="https://drive.google.com/thumbnail?id=1eFGd1qnZfELgUmmZvyrzj2EGUgUFzwWD&sz=s4000">
 
 
 <center><h1></h1>
@@ -575,7 +575,7 @@ body {
 
 <body>
 <div class="">
-<img src="https://drive.google.com/uc?export=view&id=1MOz3MRIoIVUxWoj6n1unzGPhtuXy3k15">
+<img src="https://drive.google.com/thumbnail?id=1MOz3MRIoIVUxWoj6n1unzGPhtuXy3k15&sz=s4000">
 </div></body>
 
 
